# internal/handler/dto/todo_list_response.go
@@ -1,0 +1,5 @@
+package dto
+
+type TodoListResponse struct {
+	Items []TodoResponse `json:"items"`
+}
