# internal/handler/dto/update_todo_request.go
@@ -1,0 +1,5 @@
+package dto
+
+type UpdateTodoRequest struct {
+	Completed bool `json:"completed" example:"true:"`
+}
